fix: upd booking