@@ -1,11 +1,10 @@
 package org.example.booking;
 
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.criteria.CriteriaBuilder;
-import jakarta.persistence.criteria.CriteriaQuery;
-import jakarta.persistence.criteria.Root;
+import jakarta.transaction.Transactional;
 import org.example.item.Item;
-import org.example.item.ItemInMemoryRepository;
+import org.example.item.ItemJPARepository;
+import org.example.utils.Utils;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Repository;
 
@@ -14,59 +13,48 @@ import java.time.Instant;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Repository
 public class BookingRepositoryImpl implements BookingRepository{
     private final EntityManager entityManager;
     private final BookingMapper mapper;
-    private final ItemInMemoryRepository itemInMemoryRepository;
+    private final Utils utils;
+    private final BookingJPARepository bookingJPARepository;
+    private final ItemJPARepository itemJPARepository;
     @Autowired
-    public BookingRepositoryImpl(EntityManager entityManager, BookingMapper mapper, ItemInMemoryRepository itemInMemoryRepository) {
+    public BookingRepositoryImpl(EntityManager entityManager,
+                                 BookingMapper mapper,
+                                 Utils utils,
+                                 ItemJPARepository itemJPARepository,
+                                 BookingJPARepository bookingJPARepository) {
         this.entityManager=entityManager;
         this.mapper = mapper;
-        this.itemInMemoryRepository = itemInMemoryRepository;
+        this.bookingJPARepository = bookingJPARepository;
+        this.utils = utils;
+        this.itemJPARepository = itemJPARepository;
     }
 
-/*    private List<Booking> findAll() {
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Booking> cr = cb.createQuery(Booking.class);
-        Root<Booking> root = cr.from(Booking.class);
-        cr.select(root);
-
-        return entityManager.createQuery(cr).getResultList();
-    }*/
-
     private Booking getBookingById(Long id) {
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Booking> cr = cb.createQuery(Booking.class);
-        Root<Booking> root = cr.from(Booking.class);
-        cr.select(root).where(cb.equal(root.get("id"), id));
-        return entityManager.createQuery(cr).getSingleResult();
+        return bookingJPARepository.findById(id).orElse(null);
     }
 
     @Override
-    public List<BookingDTO> findRequests(Long userId) {
-        CriteriaBuilder cb = entityManager.getCriteriaBuilder();
-        CriteriaQuery<Booking> cr = cb.createQuery(Booking.class);
-        Root<Booking> root = cr.from(Booking.class);
-        cr.select(root).where(cb.equal(root.get("owner_id"), userId));
-        List<Booking> foundBookings = entityManager.createQuery(cr).getResultList();
-        return foundBookings
-                .stream()
-                .map(mapper::toDTO)
-                .collect(Collectors.toList());
+    public List<BookingDTO> findRequests(Long ownerId) {
+        List<Item> userItems = itemJPARepository.findItemsByOwnerIdAndBookedIsTrue(ownerId);
+        List<Long> userItemsIds = userItems.stream().map(Item::getId).toList();
+        List<Booking> books = bookingJPARepository.findAllByItemIdIn(userItemsIds);
+        return utils.getListDTO(books, mapper::toDTO);
     }
 
     @Override
     public void checkPrivate(Long userId, Long bookingId, String errorText) {
-        Booking booking = getBookingById(bookingId);
+        Booking booking = bookingJPARepository.findById(bookingId).orElse(null);
 
         if (booking == null) {
             throw new NoSuchElementException("Не найдено записей о бронировании с таким id.");
         }
 
-        if (!Objects.equals(booking.getUser(), userId)) {
+        if (!Objects.equals(booking.getOwnerId(), userId)) {
             throw new SecurityException(errorText);
         }
     }
@@ -74,7 +62,11 @@ public class BookingRepositoryImpl implements BookingRepository{
     @Override
     public String getStatus(Long userId, Long bookingId) {
         checkPrivate(userId, bookingId, "Нельзя посмотреть статус чужой заявки.");
-        Booking booking = getBookingById(bookingId);
+        Booking booking = bookingJPARepository.findById(bookingId).orElse(null);
+
+        if(booking == null) {
+            throw new NoSuchElementException("Не найдено записей о бронировании с таким id.");
+        }
         BookingStatus confirmState = booking.getState();
         int confirmStateIndex = confirmState.ordinal();
 
@@ -87,25 +79,22 @@ public class BookingRepositoryImpl implements BookingRepository{
         }
     }
 
-
-    //TODO: need update
     private Item checkOwnersItem(Long userId, Booking booking) {
-        List<Item> userItems = itemInMemoryRepository.findByUserId(userId);
+        List<Item> userItems = itemJPARepository.findAllByOwnerIdIs(userId);
         return userItems.stream().filter(i -> Objects.equals(i.getId(), booking.getItemId())).toList().getFirst();
     }
 
     @Override
+    @Transactional
     public String confirm(Long ownerId, Long bookingId, boolean confirm) {
-        Booking booking = getBookingById(bookingId);
-        //TODO: need update
+        Booking booking = bookingJPARepository.findById(bookingId).orElse(null);
+
+        if(booking == null) {
+            throw new NoSuchElementException("Не найдено записей о бронировании с таким id.");
+        }
         Item item = checkOwnersItem(ownerId, booking);
 
-
         if (item != null) {
-            //TODO: need update
-            item.setBooked(confirm);
-            //TODO: need update
-            itemInMemoryRepository.save(item);
             booking.setState(confirm ? BookingStatus.values()[1] : BookingStatus.values()[2]);
             entityManager.merge(booking);
             return confirm ? "Заявка одобрена" : "Заявка отклонена";
@@ -114,9 +103,11 @@ public class BookingRepositoryImpl implements BookingRepository{
     }
 
     @Override
+    @Transactional
     public Long book(Long userId, Long itemId, Instant startDate, Instant endDate) {
-        //TODO: need update
-        Item item = itemInMemoryRepository.findAll().get(itemId);
+        Item item = itemJPARepository.getReferenceById(itemId);
+        item.setBooked(true);
+        entityManager.persist(item);
         Booking booking = new Booking(userId,
                 item.getId(),
                 0,
@@ -133,8 +124,14 @@ public class BookingRepositoryImpl implements BookingRepository{
     }
 
     @Override
+    @Transactional
     public String update(Long bookingId, Instant startDate, Instant endDate) {
         Booking booking = getBookingById(bookingId);
+        BookingStatus state = booking.getState();
+
+        if(state != BookingStatus.WAITING) {
+            throw new SecurityException("Заявка рассмотрена владельцем и не подлежит корректировкам.");
+        }
         booking.setStartDate(startDate);
         booking.setEndDate(endDate);
         entityManager.merge(booking);
@@ -142,11 +139,17 @@ public class BookingRepositoryImpl implements BookingRepository{
     }
 
     @Override
+    @Transactional
     public String remove(Long bookingId) {
         Booking booking = getBookingById(bookingId);
 
         if (booking != null) {
-            entityManager.remove(bookingId);
+            //System.out.println("\u001B[38;5;44m" + "booking: "+booking.toString()+ "\u001B[0m");
+            Long itemId = booking.getItemId();
+            Item item = itemJPARepository.getReferenceById(itemId);
+            item.setBooked(false);
+            entityManager.persist(item);
+            entityManager.remove(booking);
             return "Заявка отменена.";
         }
         throw new NoSuchElementException("Запрашиваемый ресурс не найден.");
